# buisness_agentic_rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  main.py  models.py
app/clients/: deepseek_client.py
app/core/: conversation.py  rag.py  streaming.py
app/services/: document_processor.py
app/storage/: database.py  vector_store.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: test_config_properties.py  test_deepseek_client.py
