[project]
name = "business-agent-rag"
version = "0.1.0"
description = "Enterprise AI Assistant - Business Agent RAG with FastAPI, LangChain, LangGraph, DeepSeek, and Milvus"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "langchain>=0.3.0,<1.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "pymilvus>=2.4.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "pdfplumber>=0.11.0,<1.0.0",
    "markdown>=3.7,<4.0.0",
    "sse-starlette>=2.1.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "aiomysql>=0.2.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.112.0,<7.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
